--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <input type="text" placeholder="What needs to be done?" name="todo-text" id="todo-text" />
       </form>
       <p>Todo Count: <span id="todo-count">0</span></p>
-      <ul id="todo-list"></ul>
+      <ul id="todo-list">
+      </ul>
     </div>
     <script src="./script.js"></script>
   </body>
